Updating Todo App

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.todomvvm">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,14 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"></activity>
-        <activity android:name=".TodoDetail">
+        <activity android:name=".TodoDetail"
             android:label="Todo Detail"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".AddTodoActivity">
+        <activity android:name=".AddTodoActivity"
             android:label="Todo Detail"
             android:parentActivityName=".MainActivity">
             <meta-data
@@ -34,6 +37,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".utility.Alarm.AlarmService"
+            android:enabled="true" />
+        <receiver android:name=".utility.Alarm.AlarmReceiver" />
     </application>
 
 </manifest>
